--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Minha Página</title>
+    <title>Entregador</title>
 </head>
 <body>
     <header>
-        <h1>Título da Página</h1>
+        <h1>Hora Logada vs Trabalhada</h1>
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
